--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -8,6 +8,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
     android:id="@+id/board"
+    android:weightSum="8"
     android:orientation="vertical">
 
-</GridLayout>
+</LinearLayout>
