Now the players alternate and the current turn is displayed. Fixed a bug with the pawn being able to move 2 places ahead even if there was another piece there. Now if the king is under check it's displayed, but the player can still move other pieces nevertheless.

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,4 +11,9 @@
     android:weightSum="8"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id = "@+id/turn"
+        android:text="Turn: "/>
 </LinearLayout>
